<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/Layoutfoto"
        android:layout_width="434dp"
        android:layout_height="240dp"
        android:layout_marginTop="4dp"
        android:background="#06D0EA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/foto_profil"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="98dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/Des"
            android:src="@drawable/image" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="124dp"
        android:text="@string/txtt"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Layoutfoto"
        app:layout_constraintVertical_bias="0.135" />

    <RelativeLayout
        android:id="@+id/layoutMhs"
        android:layout_width="398dp"
        android:layout_height="280dp"
        android:layout_below="@id/Layoutfoto"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/layout_nim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageView
                android:layout_width="71dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/des"
                android:src="@drawable/ic_nim" />

            <EditText
                android:id="@+id/Nim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/Nim"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_nim"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/desc"
                android:src="@drawable/ic_nama" />

            <EditText
                android:id="@+id/nama"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:text="@string/Nama"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_jurusan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_nama"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/descr"
                android:src="@drawable/ic_jurusan" />

            <EditText
                android:id="@+id/jurusan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:text="@string/Prodi"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Layout_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_jurusan"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:weightSum="11">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_weight="0"
                app:srcCompat="@drawable/ic_email" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:text="@string/email"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_btn_hapus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Layout_Email"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_simpan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorGreen"
                android:onClick="Simpan"
                android:text="@string/simpan"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>